crates/aranya-policy-compiler/tests/data/type_errors/check_not_bool_invalid_type.fail.policy
command Foo {
    seal { return todo() }
    open { return todo() }
    policy {
        check 0 else test_fail("should fail")
    }
}
